<package>
  <description>

     joy_controls

  </description>
  
  <name>joy_controls</name>
  <version>0.1.0</version>

  <author email="davidfornas@gmail.com">David Fornas</author>
  <maintainer email="davidfornas@gmail.com">David Fornas</maintainer>
  <license>BSD</license>
  
  <url>http://github.com/davidfornas/joy_controls</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>nav_msgs</build_depend>  
  <build_depend>std_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>nav_msgs</build_depend>  
  <build_depend>mar_robot_arm5e</build_depend>  
  <build_depend>visp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>nav_msgs</run_depend>  
  <run_depend>std_msgs</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>  
  <run_depend>mar_robot_arm5e</run_depend>  
  <run_depend>visp</run_depend>

</package>
